[package]
name = "mythic_metadata"
version = "0.1.0"
description = "Metadata program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mythic_metadata"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = [
  "anchor-lang/idl-build"
]

[dependencies]
anchor-lang.workspace = true
